# fumbo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  Makefile.toml  README.md  WORKSPACE
.github/workflows/: ci.yml  main.xml
documents/: ROADMAP.md
documents/book/: README.md  book.toml
documents/book/contents/: SUMMARY.md  appendix_a_0--glossary.md  appendix_a_1--acronyms.md  appendix_a_2--terms.md  appendix_b_0--references.md  appendix_b_1--bibliography.md  appendix_b_2--useful_links.md  appendixes.md  chapter_1_0--introduction.md  chapter_1_1--getting_started.md  chapter_2_0--architecture.md  chapter_2_1--segregation pattern  chapter_3_0--observability.md  foreword.md
documents/book/contents/styles/: book.css
examples/: README.md
examples/credit/: Cargo.toml  README.md
examples/credit/src/: computation.rs  main.rs
examples/merkletree/: Cargo.toml
examples/merkletree/src/: main.rs
examples/portfolio/: Cargo.toml  README.md
examples/portfolio/src/: main.rs  program.rs
examples/square/: Cargo.toml  README.md
examples/square/src/: main.rs  program.rs
examples/sudoku/: Cargo.toml  README.md
examples/wallet/: Cargo.toml  README.md
examples/zerocash/: Cargo.toml  README.md
examples/zerocash/src/: main.rs  program.rs
language/: README.md
language/backends/snark/: Cargo.toml
language/examples/: README.md
language/examples/merkletree/: Cargo.toml  README.md
language/examples/portfolio/: Cargo.toml  README.md
language/examples/portfolio/src/: main.rs  program.rs
language/examples/square/: Cargo.toml  README.md
language/examples/square/src/: main.rs  program.rs
language/examples/sudoku/: Cargo.toml
language/examples/zerocash/: Cargo.toml  README.md
language/examples/zerocash/src/: main.rs  program.rs
language/libraries/circuitry/: Cargo.toml
language/modules/: README.md
language/modules/compiler/: Cargo.toml  README.md
language/modules/compiler/src/: driver.rs  shell.rs
language/modules/evaluator/: Cargo.toml
language/modules/evaluator/tests/: runner.rs
language/modules/evaluator/tests/cases/fail/: test_inputs_item_declaration_fail.rs
language/modules/optimizer/: Cargo.toml  README.md
language/modules/parser/: BUILD  Cargo.toml  README.md
language/modules/parser/src/: lib.rs  prelude.rs
language/modules/parser/src/computation/: mod.rs
language/modules/parser/src/expressions/: conditionals.rs  loops.rs  mod.rs  operators.rs
language/modules/parser/src/items/: datatype.rs  inputs.rs  mod.rs
language/modules/parser/src/primitives/: keywords.rs  mod.rs  traits.rs  types.rs
language/modules/parser/src/program/: mod.rs
language/modules/parser/src/statements/: declarations.rs  mod.rs
language/modules/parser/tests/: runner.rs
language/modules/parser/tests/cases/pass/: test_inputs_item_declaration_pass.rs
language/modules/synthesizer/: BUILD  Cargo.toml
language/modules/typer/: Cargo.toml  README.md
language/modules/typer/src/: lib.rs
platform/: README.md
platform/substrate/verifier/: Cargo.toml  README.md
playground/: Cargo.toml
playground/src/: command.rs  context.rs  error.rs  lib.rs  main.rs  playground.rs
tooling/bazel/: repositories.bzl
verification/: README.md
verification/modules/checker/: Cargo.toml  README.md
verification/modules/checker/src/: shell.rs
