[package]
name = "woodoo-square-example"
description = "Mystic square example"
authors = [ "Handcrafted since 2022 by the Fumbo sorcerers"]
version = "0.1.0"
edition = "2021"
keywords = [
    "woodoo",
    "fumbo",
    "stark",
    "circuit",
    "game",
]
readme = "README.md"
license = "Apache-2.0"

[dependencies]

# Woodoo dependencies
woodoo-compiler = { path = "../../modules/compiler", version = "0.1.0" }

# Third-party dependencies
colored = "2.0.0"