[package]
name = "woodoo-sudoku-example"
description = "Circuit used to prove the knowledge of a valid sudoku solution"
authors = ["Handcrafted since 2022 by Fumbo sorcerers"]
version = "0.1.0"
edition = "2021"
keywords = [
    "woodoo",
    "fumbo",
    "zerocash",
    "snark",
    "circuit"
]
readme = "README.md"
license = "Apache-2.0"


[dependencies]
