[package]
name = "woodoo-evaluator"
description = "Woodoo language semantics evaluator"
authors = ["Handcrafted since 2022 by Fumbo sorcerers"]
version = "0.1.0"
edition = "2021"
keywords = [
    "woodoo",
    "fumbo",
    "language",
    "compiler",
    "semantics",
    "evaluator",
    "dependent-type",
    "verifiable-computing",
    "snark",
    "stark",
    "zero-knoweledge-proof",
    "cryptography",
    "zkp"
]
readme = "README.md"
license = "Apache-2.0"

# User interaction (UI) tests driver
[[test]]
name = "tests"
path = "tests/runner.rs"

[dependencies]
# Serialization dependencies
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]

# User interaction (UI) testing dependencies
trybuild = "1.0.56"
