[package]
name = "woodoo-parser"
description = "Woodoo language syntax analyzer"
authors = ["Handcrafted since 2022 by Fumbo sorcerers"]
version = "0.1.0"
edition = "2021"
keywords = [
    "woodoo",
    "fumbo",
    "language",
    "parser",
    "arithmetic-circuit",
    "verifiable-computing",
    "snark",
    "stark",
    "zero-knoweledge-proof",
    "cryptography",
    "zkp"
]
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true

# User interaction (UI) tests driver
[[test]]
name = "tests"
path = "tests/runner.rs"

[dependencies]
# Serialization dependencies
serde = { version = "1.0", features = ["derive"] }

# Procedural macro dependencies
proc-macro2 = "1.0.36"
proc-macro-error = "1.0.2"

# Code analysis and synthesis dependencies
syn = { version = "1.0.2", features = ["extra-traits", "full"] }
quote = "1.0.15"

[dev-dependencies]

# User interaction (UI) testing dependencies
trybuild = "1.0.56"
